# CalculadoraQML

./: CMakeLists.txt  main.cpp  main.qml
logic/: calculate.cpp  calculate.h
